# esc-rc-core-esp32

./: .gitignore  Cargo.toml  README.md
common_config/: Cargo.toml
esp32-firmware/: Cargo.toml
esp32-firmware/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  protocol.rs
src/: common_config.rs  main.rs
