[package]
name = "rc-esp32"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-hal = "0.42"
esp-idf-svc = { version = "0.47", features = ["experimental", "ws"] }
embedded-svc = "0.26"
embedded-hal = "0.2"
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[build-dependencies]
embuild = "0.31"
